--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p class="subtext">If you do not have your HawkID, please select "Student" below.</p>
       </div>
       <div class="buttons">
-        <a class="btn btn-primary employee-btn" href="/employee/index.html">Employee</a>
+        <a class="employee-btn" href="/employee/index.html">Employee</a>
         <a class="btn student-btn" href="/student/index.html">Student</a>
       </div>
     </main>
