modify hint text

--- a/student/index.html
+++ b/student/index.html
@@ -44,12 +44,12 @@
               type="text"
               id="studentId"
               name="studentId"
-              placeholder="A# (e.g., A12345678)"
+              placeholder="A12345678"
               required
             />
           </li>
           <li id="container-submit">
-            <button type="submit" name="submit" class="btn" value="Check In">
+            <button type="submit" name="submit" class="btn">Check In</button>
           </li>
         </ol>
       </form>
