Add styling for inputs

--- a/student/index.html
+++ b/student/index.html
@@ -38,7 +38,7 @@
               required
             />
           </li>
-          <li id="student-name">
+          <li id="student-Id">
             <label for="studentId" hidden>Student A#</label>
             <input
               type="text"
