--- a/student/index.html
+++ b/student/index.html
@@ -28,7 +28,7 @@
       <p class="subtext">Enter your name and A# to check in.</p>
       <form>
         <ol class="student-form-inputs">
-          <li id="student-name">
+          <li id="container-student-name">
             <label for="studentName" hidden>Student Name</label>
             <input
               type="text"
@@ -38,7 +38,7 @@
               required
             />
           </li>
-          <li id="student-Id">
+          <li id="container-student-id">
             <label for="studentId" hidden>Student A#</label>
             <input
               type="text"
@@ -48,7 +48,7 @@
               required
             />
           </li>
-          <li id="container-submit">
+          <li id="container-student-submit">
             <button type="submit" name="submit" class="btn">Check In</button>
           </li>
         </ol>
