Replace ids with class and add styling

--- a/student/index.html
+++ b/student/index.html
@@ -28,7 +28,7 @@
       <p class="subtext">Enter your name and A# to check in.</p>
       <form>
         <ol class="student-form-inputs">
-          <li id="container-student-name">
+          <li class="form-field">
             <label for="studentName" hidden>Student Name</label>
             <input
               type="text"
@@ -38,7 +38,7 @@
               required
             />
           </li>
-          <li id="container-student-id">
+          <li class="form-field">
             <label for="studentId" hidden>Student A#</label>
             <input
               type="text"
