Add employee form to css styles

--- a/employee/index.html
+++ b/employee/index.html
@@ -28,7 +28,7 @@
 
       <!-- Example login form -->
       <form>
-        <ol class="student-form-inputs">
+        <ol class="employee-form-inputs">
           <li class="form-field">
             <label for="empNumber" hidden>Employee Number</label>
             <input
