--- a/student/index.html
+++ b/student/index.html
@@ -18,14 +18,14 @@
 
     <!-- Hero / Banner -->
     <section class="hero-banner">
-      <h1>Manual Student Check-In</h1>
-      <p>Please fill out the form below if you do not have your HawkID</p>
+      <h1>Student Check-In</h1>
+      <p>Gain access to the idea shop</p>
     </section>
 
     <!-- Main Content -->
     <main class="kiosk-container">
       <h2 class="emphasis">Student Information</h2>
-      <p class="subtext">Enter your name and A# to check in.</p>
+      <p class="subtext">Login with your full name and A# if you don't have your HawkID.</p>
       <form>
         <ol class="student-form-inputs">
           <li class="form-field">
