Modify header and subtext

--- a/student/index.html
+++ b/student/index.html
@@ -25,7 +25,7 @@
     <!-- Main Content -->
     <main class="kiosk-container">
       <h2 class="emphasis">Student Information</h2>
-      <p class="subtext">Check-in with your full name and A# if you don't have your HawkID.</p>
+      <p class="subtext">Check-in with your full name and A&#35 if you don't have your HawkID.</p>
       <form>
         <ol class="student-form-inputs">
           <li class="form-field">
