--- a/student/index.html
+++ b/student/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>IDEA Shop Student Check-In</title>
     <!-- Reuse the same CSS to match the look & feel of index.html -->
-    <link rel="stylesheet" href="..\assets\css\style.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
   </head>
   <body>
 
@@ -18,7 +18,7 @@
 
     <!-- Hero / Banner -->
     <section class="hero-banner">
-      <h1>Student Check-In</h1>
+      <h1>Manual Student Check-In</h1>
       <p>Gain access to the idea shop</p>
     </section>
 
